--- a/src/game/ZoomControls/ZoomControls.module.css
+++ b/src/game/ZoomControls/ZoomControls.module.css
@@ -6,10 +6,6 @@
   inline-size: 100%;
 }
 
-.controls button {
-  block-size: var(--control-btn-size, 44px);
-}
-
 .fit {
   grid-column: 1 / -1;
 }
